--- a/project/src/layouts/Layout.astro
+++ b/project/src/layouts/Layout.astro
@@ -17,7 +17,8 @@ if (isProd) {
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Saykan Combat</title>
-  <link rel="stylesheet" href="project/css/styles.css" />
+  <base href={baseURL} />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <slot />
