modified pages, components and layouts folders

--- a/project/src/components/footer.astro
+++ b/project/src/components/footer.astro
@@ -2,13 +2,13 @@
 
 ---
 <footer>
-        <a href="/project/">Home</a>
+        <a href="./">Home</a>
         <br>
-        <a href="/project/about">About</a>
+        <a href="./about">About</a>
         <br>
-        <a href="/project/gallery">Gallery</a>
+        <a href="./gallery">Gallery</a>
         <br>
-        <a href="/project/contact">Contact</a>
+        <a href="./contact">Contact</a>
   <p>&copy; 2025 Saykan Combat. All rights reserved.</p>
   <p>Designed by C</p>
   <strong><a href="mailto:example@example.com">Contact Designer</a></strong>
