--- a/project/src/components/nav.astro
+++ b/project/src/components/nav.astro
@@ -4,8 +4,8 @@
 ---
 
 <nav>
-        <a href="/project/">Home</a>
-        <a href="/project/about">About</a>
-        <a href="/project/gallery">Gallery</a>
-        <a href="/project/contact">Contact</a>
+        <a href="./">Home</a>
+        <a href="./about">About</a>
+        <a href="./gallery">Gallery</a>
+        <a href="./contact">Contact</a>
     </nav>
