--- a/project/src/pages/about.astro
+++ b/project/src/pages/about.astro
@@ -5,4 +5,11 @@ import Layout from '../layouts/Layout.astro';
 ---
 <Layout>
     <h1>About</h1>
+
+    <p> Saykan Combat is dedicated to teaching the art of Filipino martial arts, specifically Escrima.
+        Our mission is to provide high-quality training that emphasizes practical self-defence techniques,
+        physical fitness, and mental discipline. Whether you're a beginner or an experienced martial artist,
+        Saykan Combat offers a supportive environment to help you achieve your goals.</p>
+
+        <p><a href="https://fmacombat.wordpress.com/about/">Learn more about Saykan Combat</a></p>
 </Layout>
