--- a/project/src/pages/contact.astro
+++ b/project/src/pages/contact.astro
@@ -6,4 +6,31 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
     <h1>Contact</h1>
+
+    <form class="form">
+
+    <label for="name">Name:</label><br>
+
+    <input type="text" id="name" name="name" required><br><br>
+
+    <label for="email">Email:</label><br>
+
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for ="phone">Phone Number:</label><br>
+
+    <input type="tel" id="phone" name="phone"><br><br>
+
+    <label for="subject">Subject:</label><br>
+
+    <input type="text" id="subject" name="subject" required><br><br>
+
+    <label for="message">Message:</label><br>
+
+    <textarea id="message" name="message" rows="4" required></textarea><br><br>
+
+    <strong><a href="/contact2"><button type="button">Submit</button></a></strong>
+
+    </form>
+
 </Layout>
