Add home page content, responsive CSS styling, and contact form with thank you page

--- a/project/src/pages/contact.astro
+++ b/project/src/pages/contact.astro
@@ -7,6 +7,8 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
     <h1>Contact</h1>
 
+    <p>Have questions about our classes or want to schedule a trial session? Fill out the form below and we'll get back to you as soon as possible. We look forward to hearing from you!</p>
+
     <form class="form">
 
     <label for="name">Name:</label><br>
@@ -29,7 +31,7 @@ import Layout from '../layouts/Layout.astro';
 
     <textarea id="message" name="message" rows="4" required></textarea><br><br>
 
-    <strong><a href="/contact2"><button type="button">Submit</button></a></strong>
+    <strong><a href="./contact2"><button type="button">Submit</button></a></strong>
 
     </form>
 
