--- a/project/src/pages/contact2.astro
+++ b/project/src/pages/contact2.astro
@@ -11,6 +11,6 @@ import Layout from '../layouts/Layout.astro';
     
     <p>We will be in contact with you shortly.</p>
     
-    <p><a href="/">Return to Home</a></p>
+    <p><a href="./">Return to Home</a></p>
 </Layout> 
 
