Add images, updated about, contact and gallery pages

--- a/project/public/css/styles.css
+++ b/project/public/css/styles.css
@@ -89,6 +89,15 @@ main{
     margin-right: auto;
 }
 
+.gallery-images{
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 5em;
+    width: 25%;
+
+
+}
+
 /* main heading */
 h1 {
     font-size: 3em;
@@ -128,6 +137,21 @@ h2 {
     line-height: 1.8;
 }
 
+/* table styling */
+.table {
+    width: 50%;
+    border-collapse: separate;
+    border-spacing: 10px 10px;
+    background-color: yellow;
+    color: black;
+    margin: auto;
+}
+
+.table th,
+.table td {
+    text-align: left;
+}
+
 /*form submission css*/
 form {
     background-color: yellow;
@@ -137,6 +161,20 @@ form {
     max-width: 600px;
     margin: 20px auto;
     text-align: center;
+}
+
+.submit-button {
+    background-color: black;
+    color: yellow;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1em;
+    border-radius: 5px;
+}
+
+.submit-button:hover {
+    background-color: red;
+    color: black;
 }
 
 /* footer at bottom */
