--- a/project/src/pages/about.astro
+++ b/project/src/pages/about.astro
@@ -12,4 +12,41 @@ import Layout from '../layouts/Layout.astro';
         Saykan Combat offers a supportive environment to help you achieve your goals.</p>
 
         <p><a href="https://fmacombat.wordpress.com/about/">Learn more about Saykan Combat</a></p>
+
+        <table class="table">
+            <h2>Pricing</h2>
+            <thead>
+                <tr>
+                    <th>Option</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="dot"><span>First class:</span></td>
+                    <td>Free</td>
+                </tr>
+                <tr>
+                    <td class="dot"><span>Afterwards:</span></td>
+                    <td>€10 per session</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="table">
+            <h2>Equipment</h2>
+            <thead>
+                <tr>
+                    <th>Item</th>
+                    <th>Quantity</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="dot"><span>Kali sticks</span></td>
+                    <td>×2</td>
+                </tr>
+            </tbody>
+        </table>
+        
 </Layout>
