--- a/project/src/pages/contact.astro
+++ b/project/src/pages/contact.astro
@@ -21,7 +21,7 @@ import Layout from '../layouts/Layout.astro';
 
     <label for ="phone">Phone Number:</label><br>
 
-    <input type="tel" id="phone" name="phone"><br><br>
+    <input type="tel" id="phone" name="phone" required><br><br>
 
     <label for="subject">Subject:</label><br>
 
@@ -31,7 +31,7 @@ import Layout from '../layouts/Layout.astro';
 
     <textarea id="message" name="message" rows="4" required></textarea><br><br>
 
-    <strong><a href="./contact2"><button type="button">Submit</button></a></strong>
+    <strong><a href="./contact2"><button type="button" class="submit-button">Submit</button></a></strong>
 
     </form>
 
