Fix trailing slash in base URL and all path references

--- a/project/src/components/banner.astro
+++ b/project/src/components/banner.astro
@@ -3,4 +3,4 @@
 
 ---
 
-  <img src={`${import.meta.env.BASE_URL}/images/logo.png`} alt="Banner Image"/>
+  <img src={`${import.meta.env.BASE_URL}images/logo.png`} alt="Banner Image"/>
