--- a/project/src/pages/index.astro
+++ b/project/src/pages/index.astro
@@ -20,5 +20,5 @@ import Layout from '../layouts/Layout.astro';
         <li>Join a supportive community of martial artists</li>
     </ol>
 
-    <p>Want to submit a request? <a href="./contact">Contact us here</a></p>
+    <p>Want to submit a request? <a href={`${import.meta.env.BASE_URL}contact`}>Contact us here</a></p>
 </Layout>
