--- a/project/src/components/footer.astro
+++ b/project/src/components/footer.astro
@@ -2,13 +2,13 @@
 
 ---
 <footer>
-        <a href={`${import.meta.env.BASE_URL}/`}>Home</a>
-        
-        <a href={`${import.meta.env.BASE_URL}/about`}>About</a>
-        
-        <a href={`${import.meta.env.BASE_URL}/gallery`}>Gallery</a>
-        
-        <a href={`${import.meta.env.BASE_URL}/contact`}>Contact</a>
+        <a href={`${import.meta.env.BASE_URL}`}>Home</a>
+
+        <a href={`${import.meta.env.BASE_URL}about`}>About</a>
+
+        <a href={`${import.meta.env.BASE_URL}gallery`}>Gallery</a>
+
+        <a href={`${import.meta.env.BASE_URL}contact`}>Contact</a>
   <p>&copy; 2025 Saykan Combat. All rights reserved.</p>
   <p>Designed by C</p>
   <strong><a href="mailto:example@example.com">Contact Designer</a></strong>
