--- a/project/src/components/nav.astro
+++ b/project/src/components/nav.astro
@@ -4,8 +4,8 @@
 ---
 
 <nav>
-        <a href={`${import.meta.env.BASE_URL}/`}>Home</a>
-        <a href={`${import.meta.env.BASE_URL}/about`}>About</a>
-        <a href={`${import.meta.env.BASE_URL}/gallery`}>Gallery</a>
-        <a href={`${import.meta.env.BASE_URL}/contact`}>Contact</a>
+        <a href={`${import.meta.env.BASE_URL}`}>Home</a>
+        <a href={`${import.meta.env.BASE_URL}about`}>About</a>
+        <a href={`${import.meta.env.BASE_URL}gallery`}>Gallery</a>
+        <a href={`${import.meta.env.BASE_URL}contact`}>Contact</a>
     </nav>
