--- a/project/src/layouts/Layout.astro
+++ b/project/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const baseURL = import.meta.env.BASE_URL;
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Saykan Combat</title>
   <base href={baseURL} />
-  <link rel="stylesheet" href={`${import.meta.env.BASE_URL}/css/styles.css`} />
+  <link rel="stylesheet" href={`${import.meta.env.BASE_URL}css/styles.css`} />
 </head>
 <body>
   <Header />
