--- a/project/src/pages/contact.astro
+++ b/project/src/pages/contact.astro
@@ -31,7 +31,7 @@ import Layout from '../layouts/Layout.astro';
 
     <textarea id="message" name="message" rows="4" required></textarea><br><br>
 
-    <strong><a href="./contact2"><button type="button" class="submit-button">Submit</button></a></strong>
+    <strong><a href={`${import.meta.env.BASE_URL}contact2`}><button type="button" class="submit-button">Submit</button></a></strong>
 
     </form>
 
