--- a/project/src/pages/gallery.astro
+++ b/project/src/pages/gallery.astro
@@ -8,19 +8,11 @@ import Layout from '../layouts/Layout.astro';
     <h1>Gallery</h1>
 
     <br>
-    <picture class="gallery-images">
-        <source srcset={`${import.meta.env.BASE_URL}/images/img1.png`} media="(max-width: 400px)" />
-        <img src={`${import.meta.env.BASE_URL}/images/img1.png`} alt="Image 1" style="width: 50%; height: auto;" />
-
-        <source srcset={`${import.meta.env.BASE_URL}/images/escrima.jpg`} media="(max-width: 400px)" />
-        <img src={`${import.meta.env.BASE_URL}/images/escrima.jpg`} alt="Image 2" style="width: 50%; height: auto;" />
-
-        <source srcset={`${import.meta.env.BASE_URL}/images/img2.jpg`} media="(max-width: 400px)" />
-        <img src={`${import.meta.env.BASE_URL}/images/img2.jpg`} alt="Image 3" style="width: 50%; height: auto;" />
-
-        <source srcset={`${import.meta.env.BASE_URL}/images/img3.jpg`} media="(max-width: 400px)" />
-        <img src={`${import.meta.env.BASE_URL}/images/img3.jpg`} alt="Image 4" style="width: 50%; height: auto;" />
-
-    </picture>
+    <div class="gallery-images">
+        <img src={`${import.meta.env.BASE_URL}images/img1.png`} alt="Image 1" style="width: 50%; height: auto;" />
+        <img src={`${import.meta.env.BASE_URL}images/escrima.jpg`} alt="Image 2" style="width: 50%; height: auto;" />
+        <img src={`${import.meta.env.BASE_URL}images/img2.jpg`} alt="Image 3" style="width: 50%; height: auto;" />
+        <img src={`${import.meta.env.BASE_URL}images/img3.jpg`} alt="Image 4" style="width: 50%; height: auto;" />
+    </div>
 
 </Layout>
