--- a/project/src/pages/gallery.astro
+++ b/project/src/pages/gallery.astro
@@ -9,10 +9,10 @@ import Layout from '../layouts/Layout.astro';
 
     <br>
     <div class="gallery-images">
-        <img src={`${import.meta.env.BASE_URL}images/img1.png`} alt="Image 1" style="width: 50%; height: auto;" />
-        <img src={`${import.meta.env.BASE_URL}images/escrima.jpg`} alt="Image 2" style="width: 50%; height: auto;" />
-        <img src={`${import.meta.env.BASE_URL}images/img2.jpg`} alt="Image 3" style="width: 50%; height: auto;" />
-        <img src={`${import.meta.env.BASE_URL}images/img3.jpg`} alt="Image 4" style="width: 50%; height: auto;" />
+        <img src={`${import.meta.env.BASE_URL}images/img1.png`} alt="Image 1" />
+        <img src={`${import.meta.env.BASE_URL}images/escrima.jpg`} alt="Image 2" />
+        <img src={`${import.meta.env.BASE_URL}images/img2.jpg`} alt="Image 3" />
+        <img src={`${import.meta.env.BASE_URL}images/img3.jpg`} alt="Image 4" />
     </div>
 
 </Layout>
