--- a/project/src/components/footer.astro
+++ b/project/src/components/footer.astro
@@ -11,5 +11,5 @@
         <a href={`${import.meta.env.BASE_URL}contact`}>Contact</a>
   <p>&copy; 2025 Saykan Combat. All rights reserved.</p>
   <p>Designed by C</p>
-  <strong><a href="mailto:example@example.com">Contact Club</a></strong>
+  <strong><a href="mailto:Johnnysticks73@gmail.com">Contact Club</a></strong>
 </footer>
