--- a/project/src/components/header.astro
+++ b/project/src/components/header.astro
@@ -9,6 +9,6 @@
   <source srcset={`${import.meta.env.BASE_URL}images/logo.png`} media="(max-width: 400px)" />
   <img src={`${import.meta.env.BASE_URL}images/logo.png`} alt="Banner Image" style="width: 25%; height: auto;" />
 </picture>
-  <h1>SAYKAN COMBAT</h1>
+  <h1>MEATH SAYKAN COMBAT</h1>
   <br>
   </header>
