Update contact file

--- a/project/src/pages/contact.astro
+++ b/project/src/pages/contact.astro
@@ -11,7 +11,7 @@ import Layout from '../layouts/Layout.astro';
 
     <form class="form" action="https://formspree.io/f/xeeqkogd" method="POST">
 
-    <input type="hidden" name="_next" value={`${import.meta.env.BASE_URL}contact2`} />
+    <input type="hidden" name="_next" value="https://silv3rp.github.io/project/contact2/" />
 
     <label for="name">Name:</label><br>
 
