--- a/project/src/pages/about.astro
+++ b/project/src/pages/about.astro
@@ -11,7 +11,10 @@ import Layout from '../layouts/Layout.astro';
         physical fitness, and mental discipline. Whether you're a beginner or an experienced martial artist,
         Saykan Combat offers a supportive environment to help you achieve your goals.</p>
 
+        <!-- External link for more information -->
+        <div class="link">
         <p><a href="https://fmacombat.wordpress.com/about/">Learn more about Saykan Combat</a></p>
+        </div>
 
         <table class="table">
             <h2>Pricing</h2>
@@ -44,11 +47,13 @@ import Layout from '../layouts/Layout.astro';
             <tbody>
                 <tr>
                     <td>Kali sticks</td>
-                    <td>×2</td>
+                    <td>&#x78;2</td>
                 </tr>
             </tbody>
         </table>
 
+        <!-- Introductory video embedded from YouTube -->
+        <h2>Introductory Video</h2>
         <iframe width="560" height="315" 
     src="https://www.youtube.com/embed/G4K3D7YVKcs" 
     title="Saykan Combat Systems: Lesson 1 (12 Striking Angles)" 
