--- a/project/src/pages/gallery.astro
+++ b/project/src/pages/gallery.astro
@@ -8,6 +8,7 @@ import Layout from '../layouts/Layout.astro';
     <h1>Gallery</h1>
 
     <br>
+    <!-- Gallery container with images using dynamic base URL -->
     <div class="gallery-images">
         <img src={`${import.meta.env.BASE_URL}images/img1.png`} alt="Image 1" />
         <img src={`${import.meta.env.BASE_URL}images/escrima.jpg`} alt="Image 2" />
