--- a/project/src/pages/index.astro
+++ b/project/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
-
 ---
 
-<Layout>
+<Layout 
+    title="Meath Saykan Combat"
+    description="Meath Saykan Combat - Traditional martial arts training in Meath, Ireland"
+    keywords="martial arts, meath, saykan, combat, training">
+
     <h1>Home</h1>
 
     <p> Exploring the world of Filipino martial arts.
@@ -20,5 +23,8 @@ import Layout from '../layouts/Layout.astro';
         <li>Join a supportive community of martial artists</li>
     </ol>
 
-    <p>Want to submit a request? <a href={`${import.meta.env.BASE_URL}contact`}>Contact us here</a></p>
+    <!-- Link to contact page using base URL -->
+    <div class="link">
+        <p>Want to submit a request? <a href={`${import.meta.env.BASE_URL}contact`}>Contact us here</a></p>
+    </div>
 </Layout>
